--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 			<div class="section4__icon">
 				<figure class="section4__img">
 					<img src="./img/warehouse 1 (1).png" alt="img">
-					<p class="section4__img__text">Товар постоянно имеется на складе</p>
+					<p class="section4__img__text section4__img1">Товар постоянно имеется на складе</p>
 				</figure>
 				<figure class="section4__img">
 					<img src="./img/commerce-and-shopping 1 (1).png" alt="img">
-					<p  class="section4__img__text">Гибкая система скидок</p>
+					<p  class="section4__img__text section4__img2">Гибкая система скидок</p>
 				</figure>
 				<figure class="section4__img">
 					<img src="./img/27633167 1 (1).png" alt="img">
@@ -194,7 +194,7 @@
 				</figure>
 				<figure class="section4__img">
 					<img src="./img/black-and-white-credit-cards (3) 1 (2).png" alt="img">
-					<p class="section4__img__text">Удобные способы оплаты</p>
+					<p class="section4__img__text section4__img4">Удобные способы оплаты</p>
 				</figure>
 			</div>
 		</div>
@@ -235,9 +235,9 @@
 
 	<!--modal-->
 	<div id="modal_tel" class="d-none modal__tel">
-		<div class="modal__tel__contnet">
+		<div class="modal__tel__contnet" >
 			<div class="madal__tel__button">
-				<button id="close">x</button>
+				<button  id="close">x</button>
 			</div>
 		<div class="madal__tel__button__tel">
 			<input class="madal__tel__button__tel__input" type="phone" id="phone" name="tel[]"  data-phonemask="+7 (___)__-___-___" placeholder="Напишите свой номер" pattern="2-[0-9]{3}-[0-9]{3}" required/>
